--- a/public/article-launch.html
+++ b/public/article-launch.html
@@ -22,16 +22,13 @@
 
     <!-- CUSTOM CSS -->
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
 
     <!--Font Awesome -->
     <link href="plugins/font-awesome/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-    <!-- CUSTOM CSS -->
-    <link href="css/style.css" rel="stylesheet">
 
     <!-- FAVICON -->
     <link href="images/EtherCRM-small-logo.png" rel="shortcut icon">
@@ -53,33 +50,51 @@
     </section>
 
     <div class="row">
-        <div class="col-sm-8 m-auto">
+        <div class="col-lg-8 m-auto">
             <!-- Page Title -->
             <h1 text="align-center">Binary01 has launched Customer Relationship Management (CRM) system EtherCRM.</h1>
             <!-- Page Description -->
-            <div class="col-sm-8 m-auto" class="margin-left">
-                <p>
-                    The new CRM acts as a point of interaction between financial advisers and wealth managers and their clients </br>
-                    The application contains the latest technologies and practices dedicated to Sales and Marketing and related to the business </br>
-                    combined with in-depth business processing workflows designed to improve regulatory compliance and relationships with customers. </br>
-                    It provides and compiles relevant information on them, and supports advisers and their teams in driving sales growth.</br>
-
-                    <section class="section investors">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-6 Center-align content">
-                                    <img src="images/ethercrm-laptop.png" alt="ether-crm" style="width:900px; height:500px;">
-                                    <h3>Designed for finacial advisers &amp; wealth managers</h3>
-                                    <p>Improving business</p>
-                                </div>
+            <div class="col-lg-812 m-auto">
+                The new CRM acts as a point of interaction between financial advisers and wealth managers and their clients. The application contains the latest technologies and practices dedicated to Sales and Marketing helping drive business.</br>
+                </br>
+                This is just the surface, EtherCRM also combines in-depth business processing workflows, improving regulatory compliance supporting advisers and their teams stay compliant.</br>
+                </br>
+                <section class="section investors">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-9 Center-align content">
+                                <img src="images/ethercrm-laptop.png" alt="ether-crm" style="width:900px; height:500px;">
+                                <h3 style="align-content: centre">Designed for finacial advisers &amp; wealth managers</h3>
+                                <p style="align-content: centre">Improving business</p>
                             </div>
-                    </section>
-                    <q>"We believe that it is crucial for businesses and customers within financial services to have a modern robust system, fit for purpose.
-                         A system which does not cost the earth and helps businesses grow. A system built with compliance in mind to help reduce risk. Enabling advisers and wealth managers to better serve their clients and raise industry standards.” </q></br>
-                    - Edwin Luther, Founder</br>
-                    <p>EtherCRM is a customisable online CRM system, which helps you focus on what’s most important and lets you spend your energy on really making a difference. </p>
-                    </br>
-                </p>
+                        </div>
+                </section>
+                <q>We believe that it is crucial for businesses and customers within financial services to have a modern robust system, fit for purpose.
+                         A system which does not cost the earth and helps businesses grow. A system built with compliance in mind to help reduce risk. Enabling advisers and wealth managers to better serve their clients and raise industry standards.</q></br>
+                - Edwin Luther, Founder</br>
+                </br>
+                EtherCRM is a customisable online CRM system, which helps you focus on what’s most important and lets you spend your energy on really making a difference. A unified system that gives you a total 360 dregree view of all of yo9ur clients you can easily
+                see where more attention is needed, with our easy to view client dashbashboard.</br>
+                </br>
+                <section class="section investors">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-9 Center-align content">
+                                <img src="images/Ether-client-dashboard.png" alt="ether-crm" style="width:900px; height:500px;">
+                                <h3 style="align-content: centre"> Make sure all of your cleint files are upto date.</h3>
+                                <p style="align-content: centre">Making efficieny and compliance the core of your business.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <h2 class="animate lightSpeedIn">Scalability and Speed</h2>
+                </br>
+                Build using Node JS and Angular 4 EtherCRM is an age apart from most commonly used systems. Our Elastic database that's highly optimized for near-instant rendering in just HTML and CSS. </br>
+                </br>
+                Angular apps load quickly with the new Component Router, which delivers automatic code-splitting so users only load code required to render the view they request.</br>
+                </br>
+                EtherCRM is by Heroku allowing us to horizontally scale any app running on our server easily and quickly, enabling more CPU and memory capacity.</br>
+                </br>
                 </div>
             </div>
         </div>
