--- a/public/index.html
+++ b/public/index.html
@@ -23,18 +23,13 @@
 
     <!-- CUSTOM CSS -->
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
 
-    <!--Font Awesome -->
+
     <link href="plugins/font-awesome/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-
-    <!-- CUSTOM CSS -->
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
 
     <!-- FAVICON -->
     <link href="images/EtherCRM-small-logo.png" rel="shortcut icon">
@@ -143,7 +138,7 @@
             <div class="row">
                 <div class="col-lg-6 ml-auto justify-content-center">
                     <!-- Feature Mockup -->
-                    <div class="image-content">
+                    <div class="image-content animated lightspeedin">
                         <img class="img-fluid" src="images/All-ether.png" alt="ether-platform">
                     </div>
                 </div>
@@ -206,7 +201,7 @@
                 </div>
                 <div class="col-lg-6 mr-auto justify-content-center">
                     <!-- Feature mockup -->
-                    <div class="image-content">
+                    <div class="image-content animated lightspeedin">
                         <img class="img-fluid" src="images/Ether-Chat.png" alt="ether-teamchat">
                     </div>
                 </div>
@@ -329,17 +324,17 @@
                     <p>Leading technology, trusted by financial advisers and wealth managers!
                         <br>We Know you won’t look back.</p>
                     <ul class="list-inline">
-                        <li class="list-inline-item">
+                        <li class="list-inline-item animated infinite flash">
                             <a href="" class="btn btn-rounded-icon">
                                 <i class="tf-ion-android-time"></i> Save time
                             </a>
                         </li>
-                        <li class="list-inline-item">
+                        <li class="list-inline-item animated infinite shake">
                             <a href="" class="btn btn-rounded-icon">
                                 <i class="tf-ion-ios-briefcase"></i> Stay compliant
                             </a>
                         </li>
-                        <li class="list-inline-item">
+                        <li class="list-inline-item animated infinite bounce">
                             <a href="" class="btn btn-rounded-icon">
                                 <i class="tf-ion-locked"></i> Keep data secure
                             </a>
