--- a/public/news.html
+++ b/public/news.html
@@ -109,7 +109,7 @@
                     <article class="featured">
                         <!-- Image -->
                         <div class="image post-thumb">
-                            <a href="article-launch.html"><img src="images/ether-all.png" alt="featured-article"></a>
+                            <a href="article-launch.html"><img src="images/all-ether.png" alt="featured-article"></a>
                         </div>
                         <!-- written-content -->
                         <div class="content">
