--- a/public/article-launch.html
+++ b/public/article-launch.html
@@ -34,6 +34,43 @@
     <link href="images/EtherCRM-small-logo.png" rel="shortcut icon">
 
 </head>
+<nav class="navbar main-nav navbar-expand-lg p-0">
+    <div class="container">
+        <a class="navbar-brand" href="index.html"><img src="images/EtherCRM-small-logo.png" alt="ether-logo"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="tf-ion-android-menu"></span>
+					</button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item dropdown dropdown-slide">
+                    <a class="nav-link" href="index.html">Home</a>
+                    <!-- Dropdown list -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Our technology.html">Our technology</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="news.html">News &amp; Updates</a>
+                    </li>
+                    <li class="nav-item dropdown dropdown-slide">
+                        <a class="nav-link" href="#" data-toggle="dropdown">FAQs
+						  <span><i class="tf-ion-ios-arrow-down"></i></span>
+						</a>
+                        <!-- Dropdown list -->
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="FAQ.html">Frequently Asked Questions</a>
+                            <a class="dropdown-item" href="compliance.html">Compliance</a>
+                            <a class="dropdown-item" href="privacy-policy.html">Privacy Policy</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+        </div>
+    </div>
+</nav>
 
 <body>
     <section class="section page-title">
@@ -41,14 +78,11 @@
             <div class="row">
                 <div class="col-sm-8 m-auto">
                     <!-- Page Title -->
-                    <h1>News</h1>
-                    <!-- Page Description -->
-                    <p>Latest news and updates from EtherCRM</p>
+                    <h1 calss="animated lightSpeedIn">Latest News and Updates from EtherCRM</h1>
                 </div>
             </div>
         </div>
     </section>
-
     <div class="row">
         <div class="col-lg-8 m-auto">
             <!-- Page Title -->
@@ -87,9 +121,9 @@
                         </div>
                     </div>
                 </section>
-                <h2 class="animate lightSpeedIn">Scalability and Speed</h2>
+                <h2 class="animated lightSpeedIn">Scalability and Speed</h2>
                 </br>
-                Build using Node JS and Angular 4 EtherCRM is an age apart from most commonly used systems. Our Elastic database that's highly optimized for near-instant rendering in just HTML and CSS. </br>
+                Built using Node JS and Angular 4 EtherCRM is an age apart from most commonly used systems. Our Elastic database that's highly optimized for near-instant rendering in just HTML and CSS. </br>
                 </br>
                 Angular apps load quickly with the new Component Router, which delivers automatic code-splitting so users only load code required to render the view they request.</br>
                 </br>
