--- a/public/ether-demo.html
+++ b/public/ether-demo.html
@@ -39,6 +39,43 @@
 
 </head>
 
+<nav class="navbar main-nav navbar-expand-lg p-0">
+    <div class="container">
+        <a class="navbar-brand" href="index.html"><img src="images/EtherCRM-small-logo.png" alt="ether-logo"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="tf-ion-android-menu"></span>
+			</button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item dropdown dropdown-slide">
+                    <a class="nav-link" href="index.html">Home</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Our technology.html">Our technology</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="News.html">News &amp; Updates</a>
+                    </li>
+                    <li class="nav-item dropdown dropdown-slide">
+                        <a class="nav-link" href="#" data-toggle="dropdown">FAQs
+				  <span><i class="tf-ion-ios-arrow-down"></i></span>
+				</a>
+                        <!-- Dropdown list -->
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="FAQ.html">Frequently Asked Questions</a>
+                            <a class="dropdown-item" href="compliance.html">Compliance</a>
+                            <a class="dropdown-item" href="privacy-policy.html">Privacy Policy</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+        </div>
+    </div>
+</nav>
+
 <body>
 
     <form class="form-horizontal">
