--- a/public/career.html
+++ b/public/career.html
@@ -39,7 +39,7 @@
 
 </head>
 
-<body class="body-wrapper">
+<body>
 
     <nav class="navbar main-nav navbar-expand-lg p-0">
         <div class="container">
@@ -104,7 +104,7 @@
                     <!-- Page Title -->
                     <h1>Career</h1>
                     <!-- Page Description -->
-                    <p>Join a group of ambitious innovators, who belive that average and adaquate are simly a waste of time</p>
+                    <p>Join a group of ambitious innovators, who belive that average and adaquate are simply a waste of time.</p>
                 </div>
             </div>
         </div>
@@ -127,8 +127,11 @@
                             <!-- Career heading -->
                             <h2>Who we're looking for</h2>
                             <!-- Career Description -->
-                            <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. eget tortor risus. Vivamus magna justo, lacinia eget consectetur sed,convallis at tellus. Vivamus suscipit tortor eget felis porttitor volutpat.Curabitur
-                                arcu erat, accumsan id imperdiet et, porttitor at sem. Praesent sapien massa, convallis</p>
+                            <p> Coders and entrepenurs to assist us in driving forwards compliance and AML standards in Financial Services. Our aim is to grow to be the lagest CRM provider for advisers across the UK, EU and U.S.,
+                                < </p>
+                                    </br>
+                                    <h2 class="bold animated Slideup"> Up for it?</h2>
+                            </p>
                         </div>
                         <!-- Promo Video -->
                         <div class="video">
