--- a/public/career.html
+++ b/public/career.html
@@ -128,15 +128,15 @@
                             <h2>Who we're looking for</h2>
                             <!-- Career Description -->
                             <p> Coders and entrepenurs to assist us in driving forwards compliance and AML standards in Financial Services. Our aim is to grow to be the lagest CRM provider for advisers across the UK, EU and U.S.,
-                                < </p>
-                                    </br>
-                                    <h2 class="bold animated Slideup"> Up for it?</h2>
+                            </p>
+                            </br>
+                            <h2 class="bold animated Slideup"> Up for it?</h2>
                             </p>
                         </div>
                         <!-- Promo Video -->
                         <div class="video">
                             <!-- Video Thumb -->
-                            <img class="img-fluid shadow" src="images/thumbs/promo-video-thumbnail.png" alt="video-thumbnail">
+                            <img class="img-fluid shadow" src="images/ether-client-dashboard.png" alt="video-thumbnail">
                             <!-- Video Button -->
                             <div class="video-button video-box">
                                 <a href="javascript:void(0)">
@@ -197,15 +197,13 @@
                         <!-- Icon -->
                         <i class="tf-ion-ios-stopwatch-outline"></i>
                         <h3>Flexible hours</h3>
-                        <p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec rutrum congue leo eget malesuada.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="fun-fact">
                         <!-- Icon -->
                         <i class="tf-ion-ios-wineglass"></i>
-                        <h3>Free Snacks & Drinks</h3>
-                        <p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec rutrum congue leo eget malesuada.</p>
+                        <h3>Free Snacks &amp; Drinks</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
@@ -213,15 +211,14 @@
                         <!-- Icon -->
                         <i class="tf-ion-ios-game-controller-b-outline"></i>
                         <h3>Gaming</h3>
-                        <p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec rutrum congue leo eget malesuada.</p>
+                        <p>(Of course)</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="fun-fact">
                         <!-- Icon -->
                         <i class="tf-ion-ios-flask-outline"></i>
-                        <h3>4 Working Days</h3>
-                        <p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Donec rutrum congue leo eget malesuada.</p>
+                        <h3>Be your own boss</h3>
                     </div>
                 </div>
             </div>
