--- a/public/index.html
+++ b/public/index.html
@@ -325,7 +325,7 @@
                         <br>We Know you won’t look back.</p>
                     <ul class="list-inline">
                         <li class="list-inline-item animated infinite flash">
-                            <a href="" class="btn btn-rounded-icon">
+                            <a href="article-ethercrm-savetime.html" class="btn btn-rounded-icon">
                                 <i class="tf-ion-android-time"></i> Save time
                             </a>
                         </li>
