--- a/public/article-ethercrm-savetime.html
+++ b/public/article-ethercrm-savetime.html
@@ -100,14 +100,14 @@
                         <div class="row">
                             <div class="col-md-9 Center-align content">
                                 <img src="images/bad-data-crm.png" alt="ethercrm-data" style="width:900px; height:500px;">
-                                <h3 style="align-content: centre">How much time and money is bad technology costing you?</h3>
+                                <h3>How much time and money is bad technology costing you?</h3>
                             </div>
                         </div>
                 </section>
                 <h1>Findings from the Chelsea Apps Report</h1>
                 </br>
                 <div class="left">
-                    <il>59% of people said that their personal mobile phone was better than the one work gave them to use.</il>
+                    <li>59% of people said that their personal mobile phone was better than the one work gave them to use.</li>
                     <li>Just 11% said that their work phone was better.</li>
                     <li> Twice as many people have better mobile phone coverage at home compared to their workplace (49% v 23%)</li>
                     <li> An astonishing four times as many people said their home tablet computer was better than the one work gives them to use (50% v 11%)</li>
@@ -123,18 +123,9 @@
                 Mike Anderson, CEO of Chelsea Apps Factory, said: <q>“It’s clear that the ‘techspectations’ of the modern employee far outweigh what companies can deliver – and employees are literally taking matters into their own hands.                
                         “Businesses are still investing unnecessary millions on clunky, highly-complex systems, services and software that leave employees stumped, unproductive and in some cases so unhappy they would consider leaving their job.</q></br>
                 </br>
-                <section class="section investors">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-9 Center-align content">
-                                <img src="images/Ether-client-dashboard.png" alt="ether-crm" style="width:900px; height:500px;">
-                                <h3 style="align-content: centre"> Make sure all of your cleint files are upto date.</h3>
-                                <p style="align-content: centre">Making efficieny and compliance the core of your business.</p>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-                <h2 class="animated lightSpeedIn">Scalability and Speed</h2>
+                <div class="container-fluid"></div>
+                <h2 class="animated lightSpeedIn">Why is EtherCRM diffrent?</h2>
+                <h3>How much time and money we can save you today</h3>
                 </br>
                 Built using Node JS and Angular 4 EtherCRM is an age apart from most commonly used systems. Our Elastic database that's highly optimized for near-instant rendering in just HTML and CSS. </br>
                 </br>
