--- a/public/article-ethercrm-savetime.html
+++ b/public/article-ethercrm-savetime.html
@@ -97,7 +97,7 @@
                 </br>
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-md-9 Center-align content">
+                        <div class="col-md-12 Center-align content">
                             <img src="images/bad-data-crm.png" alt="ethercrm-data" style="width:900px; height:500px;">
                             <h3>How much time and money is bad technology costing you?</h3>
                         </div>
@@ -119,7 +119,8 @@
                         </br>
                     </div>
 
-                    Mike Anderson, CEO of Chelsea Apps Factory, said: <q>“It’s clear that the ‘techspectations’ of the modern employee far outweigh what companies can deliver – and employees are literally taking matters into their own hands.                
+                    Mike Anderson, CEO of Chelsea Apps Factory, said: </br>
+                    </br><q>“It’s clear that the ‘techspectations’ of the modern employee far outweigh what companies can deliver – and employees are literally taking matters into their own hands.                
                         “Businesses are still investing unnecessary millions on clunky, highly-complex systems, services and software that leave employees stumped, unproductive and in some cases so unhappy they would consider leaving their job.</q></br>
                     </br>
                     <div class="container-fluid"></div>
@@ -127,40 +128,49 @@
                     <h3>How much time and money we can save you today</h3>
                     </br>
                     The location of your office in relation to the location of your instance of your software and plugins is a factor in understanding the performance of your application. It’s actually central to many of the performance issues users of Salesforce for example
-                    see. Diminishing the physical distance and the number of network hops to get to Salesforce can have a huge impact on performance. </br>
-                    EtherCRM are dedicated to providing its platform where its needed to improve performance and relability.
+                    see.
                     </br>
-                    The average Salesforce customer has seven plugins within Salesforce, each of which can dramatically help or hurt the overall end-user experience of Salesforce. T The majority of your total data transfer could actually be from these third-party plugins,
-                    which work with Salesforce to provide lead sourcing, marketing, sales and accounting capabilities. Therefore, you want to explore how much bandwidth your plugins are using, and from where these plugins are being served, as seen below</br>
-                    <img src="images/salesforce-useage-plugin.png" alt="ethercrm-data" style="width:900px; height:500px;">
+                    </br>Diminishing the physical distance and the number of network hops to get to Salesforce can have a huge impact on performance. </br>
+                    EtherCRM are dedicated to providing its platform where its needed to improve performance and relability.</br>
                     </br>
-                    A Successful CRM depends more on strategy than on the amount you spend on technology. Strategy is about allocating scarce resources to create competitive advantage and superior performance. We believe that the only way you can make CRM work is by taking
-                    the time to calculate your customer strategy, which helps employees understand where they are going and why, and to align your business processes before implementing the technology.</br>
+                    </br>
+                    The average Salesforce customer has seven plugins within Salesforce, each of which can dramatically help or hurt the overall end-user experience of Salesforce. </br>
+                    </br>
+                    </br>
+                    The majority of your total data transfer could actually be from these third-party plugins, which work with Salesforce to provide lead sourcing, marketing, sales and accounting capabilities. Therefore, you want to explore how much bandwidth your plugins
+                    are using, and from where these plugins are being served, as seen below</br>
+                    </br>
+                    <img src="images/salesforce-useage-plugin.png" alt="ethercrm-data" style="width:900px; height:500px; padding-bottom:50px;">
+                    </br>
+                    A Successful CRM depends more on strategy than on the amount you spend on technology. Strategy is about allocating scarce resources to create competitive advantage and superior performance. </br>
+                    </br>
+                    We believe that the only way you can make CRM work is by taking the time to calculate your customer strategy, which helps employees understand where they are going and why, and to align your business processes before implementing the technology.</br>
                     By starting with our customers in mind, EtherCRM is built to meet the needs of our customers not just today but also tomorrow.</br>
+                    </br>
 
                     Our driving purpose is to improve our clients businesses, making sure our system is able to deliver this quickly, is something we weork on daily.
-                    <div class style="bold"> Based on our client feedback in 2017 We save each indivual, within a fincial advice business, between 6hrs and 14 hrs per week. </style>
-                    </div>
-                    </br>
+                    <strong> Based on our client feedback in 2017 We save each indivual, within a fincial advice business, between 6hrs and 14 hrs per week. </strong>
                 </div>
+                </br>
             </div>
         </div>
+    </div>
 
 
 
-        <!-- JAVASCRIPTS -->
+    <!-- JAVASCRIPTS -->
 
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBI14J_PNWVd-m0gnUBkjmhoQyNyd7nllA" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBI14J_PNWVd-m0gnUBkjmhoQyNyd7nllA" async defer></script>
 
-        <script src="plugins/jquery/jquery.js"></script>
-        <script src="plugins/popper/popper.min.js"></script>
-        <script src="plugins/bootstrap/js/bootstrap.min.js"></script>
-        <script src="plugins/owl-carousel/owl.carousel.min.js"></script>
-        <script src="plugins/fancybox/jquery.fancybox.min.js"></script>
-        <script src="plugins/smoothscroll/SmoothScroll.min.js"></script>
-        <script src="plugins/syotimer/jquery.syotimer.min.js"></script>
+    <script src="plugins/jquery/jquery.js"></script>
+    <script src="plugins/popper/popper.min.js"></script>
+    <script src="plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script src="plugins/owl-carousel/owl.carousel.min.js"></script>
+    <script src="plugins/fancybox/jquery.fancybox.min.js"></script>
+    <script src="plugins/smoothscroll/SmoothScroll.min.js"></script>
+    <script src="plugins/syotimer/jquery.syotimer.min.js"></script>
 
-        <script src="js/custom.js"></script>
+    <script src="js/custom.js"></script>
 </body>
 
 </html>
