--- a/public/career.html
+++ b/public/career.html
@@ -237,25 +237,25 @@
                 <div class="col-12 col-lg-10 m-auto">
                     <div class="block">
                         <div class="title text-center">
-                            <h2>Job Opening</h2>
+                            <h2>Sales Rep UK/h2>
                         </div>
                         <!-- Job List -->
                         <div class="job">
                             <div class="content">
                                 <!-- Job Title -->
-                                <h3>Andriod Developer</h3>
+                                <h3>Sales Executive</h3>
                                 <!-- Location -->
-                                <p>Hamburg, Germany</p>
+                                <p>Any location, UK</p>
                             </div>
                             <!-- Action Button -->
                             <div class="apply-button">
-                                <a href="#" class="btn btn-main-md" data-toggle="modal" data-target="#android-developer">View Details</a>
+                                <a href="#" class="btn btn-main-md" data-toggle="modal" data-target="#uk-salesrep">View Details</a>
                                 <!-- Modal -->
-                                <div class="modal fade jd-modal" id="android-developer" tabindex="-1">
+                                <div class="modal fade jd-modal" id="uk-salesrep" tabindex="-1">
                                     <div class="modal-dialog modal-lg">
                                         <div class="modal-content">
                                             <div class="modal-header">
-                                                <h5 class="modal-title">Android Developer</h5>
+                                                <h5 class="modal-title">Uk Sales Executive</h5>
                                                 <button type="button" class="close" data-dismiss="modal">
           <span>&times;</span>
         </button>
@@ -267,7 +267,7 @@
                                                         <p>Location</p>
                                                     </div>
                                                     <div class="details">
-                                                        <p>Hamburg, Germany</p>
+                                                        <p>Various, UK</p>
                                                     </div>
                                                 </div>
                                                 <!-- About -->
@@ -288,7 +288,7 @@
                                                     <div class="details">
                                                         <ul>
                                                             <li><span class="tf-ion-ios-arrow-forward"></span>3+ years Development experience in a startup environment</li>
-                                                            <li><span class="tf-ion-ios-arrow-forward"></span>Strong knowledge of iOS, Android & Web Platforms</li>
+                                                            <li><span class="tf-ion-ios-arrow-forward"></span>Strong knowledge of software sales or fincial services</li>
                                                             <li><span class="tf-ion-ios-arrow-forward"></span>Dynamic presentation and communication skills</li>
                                                             <li><span class="tf-ion-ios-arrow-forward"></span>Self-motivation: You manage your own milestones, deadlines, and priorities</li>
                                                         </ul>
@@ -299,7 +299,7 @@
                                                     <h3>Apply Now</h3>
                                                 </div>
                                                 <!-- Application Form -->
-                                                <form action="#">
+                                                <form action="login-sales.html">
                                                     <div class="row">
                                                         <!-- Name -->
                                                         <div class="col-lg-6 col-md-12">
