--- a/public/career.html
+++ b/public/career.html
@@ -237,7 +237,7 @@
                 <div class="col-12 col-lg-10 m-auto">
                     <div class="block">
                         <div class="title text-center">
-                            <h2>Sales Rep UK/h2>
+                            <h2>Sales Rep UK</h2>
                         </div>
                         <!-- Job List -->
                         <div class="job">
@@ -336,9 +336,9 @@
                         <div class="job">
                             <div class="content">
                                 <!-- Job Title -->
-                                <h3>DevOps Engineer</h3>
+                                <h3>EU Sales Executive</h3>
                                 <!-- Location -->
-                                <p>London, United Kingdom</p>
+                                <p>EU</p>
                             </div>
                             <!-- Action Button -->
                             <div class="apply-button">
