--- a/public/index.html
+++ b/public/index.html
@@ -330,12 +330,12 @@
                             </a>
                         </li>
                         <li class="list-inline-item animated infinite shake">
-                            <a href="" class="btn btn-rounded-icon">
+                            <a href="article-ethercrm-compliance.html" class="btn btn-rounded-icon">
                                 <i class="tf-ion-ios-briefcase"></i> Stay compliant
                             </a>
                         </li>
                         <li class="list-inline-item animated infinite bounce">
-                            <a href="" class="btn btn-rounded-icon">
+                            <a href="article-ethercrm-security.html" class="btn btn-rounded-icon">
                                 <i class="tf-ion-locked"></i> Keep data secure
                             </a>
                         </li>
