--- a/public/Our technology.html
+++ b/public/Our technology.html
@@ -302,12 +302,12 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="" class="btn btn-rounded-icon">
+                            <a href="article-ethercrm-compliant.html" class="btn btn-rounded-icon">
                                 <i class="tf-ion-ios-briefcase"></i> Stay compliant
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="" class="btn btn-rounded-icon">
+                            <a href="article-ethercrm-security.html" class="btn btn-rounded-icon">
                                 <i class="tf-ion-locked"></i> Keep data secure
                             </a>
                         </li>
